--- a/login.html
+++ b/login.html
@@ -11,15 +11,19 @@
       <div class="form-box">
         <div class="button-box">
           <div id="btn"></div>
-          <button type="button" class="toogle-btn">Log In</button>
-          <button type="button" class="toogle-btn">Sign Up</button>
+          <button type="button" class="toogle-btn" onclick="login()">
+            Log In
+          </button>
+          <button type="button" class="toogle-btn" onclick="register()">
+            Register
+          </button>
         </div>
         <div class="social-icons">
-          <img src="./Images/fb.png" />
-          <img src="./Images/gp.png" />
-          <img src="./Images/tw.png" />
+          <img src="./Images/iconmonstr-facebook-4-240.png" />
+          <img src="./Images/iconmonstr-google-plus-4-240.png" />
+          <img src="./Images/iconmonstr-instagram-14-240.png" />
         </div>
-        <form class="input-group">
+        <form id="login" class="input-group">
           <input
             type="text"
             class="input-field"
@@ -37,7 +41,47 @@
           >
           <button type="submit" class="submit-btn">Log in</button>
         </form>
+        <form id="register" class="input-group">
+          <input
+            type="text"
+            class="input-field"
+            placeholder="User Id"
+            required
+          />
+          <input
+            type="email"
+            class="input-field"
+            placeholder="Email Id"
+            required
+          />
+          <input
+            type="email"
+            class="input-field"
+            placeholder="Enter Password"
+            required
+          />
+          <input type="checkbox" class="check-box" /><span
+            >I agree to the terms and conditions</span
+          >
+          <button type="submit" class="submit-btn">Register</button>
+        </form>
       </div>
     </div>
+    <script>
+      var x = document.getElementById("login");
+      var y = document.getElementById("register");
+      var z = document.getElementById("btn");
+
+      function register() {
+        x.style.left = "-400px";
+        y.style.left = "50px";
+        z.style.left = "110px";
+      }
+      function login() {
+        x.style.left = "50px";
+        y.style.left = "450px";
+        z.style.left = "0px";
+      }
+    </script>
   </body>
 </html>
