--- a/register.html
+++ b/register.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>login</title>
+    <title>Register</title>
+    <style>
+      #login {
+        left: 450px;
+      }
+      #register {
+        left: 50px;
+      }
+    </style>
   </head>
   <body>
     <div class="hero">
       <div class="form-box">
         <div class="button-box">
           <div id="btn"></div>
-          <button type="button" class="toogle-btn" onclick="login()">
-            Log In
-          </button>
           <button type="button" class="toogle-btn" onclick="register()">
             Register
+          </button>
+          <button type="button" class="toogle-btn" onclick="login()">
+            Log In
           </button>
         </div>
         <div class="social-icons">
@@ -23,24 +31,7 @@
           <img src="./Images/iconmonstr-google-plus-4-240.png" />
           <img src="./Images/iconmonstr-instagram-14-240.png" />
         </div>
-        <form id="login" class="input-group">
-          <input
-            type="email"
-            class="input-field"
-            placeholder="Email Id"
-            required
-          />
-          <input
-            type="text"
-            class="input-field"
-            placeholder="Enter Password"
-            required
-          />
-          <input type="checkbox" class="check-box" /><span
-            >Remember Password</span
-          >
-          <button type="submit" class="submit-btn">Log in</button>
-        </form>
+
         <form id="register" class="input-group">
           <input
             type="text"
@@ -71,6 +62,24 @@
           > -->
           <button type="submit" class="submit-btn">Register</button>
         </form>
+        <form id="login" class="input-group">
+          <input
+            type="email"
+            class="input-field"
+            placeholder="Email Id"
+            required
+          />
+          <input
+            type="text"
+            class="input-field"
+            placeholder="Enter Password"
+            required
+          />
+          <input type="checkbox" class="check-box" /><span
+            >Remember Password</span
+          >
+          <button type="submit" class="submit-btn">Log in</button>
+        </form>
       </div>
     </div>
     <script>
@@ -79,14 +88,14 @@
       var z = document.getElementById("btn");
 
       function register() {
-        x.style.left = "-400px";
+        x.style.left = "450px";
         y.style.left = "50px";
-        z.style.left = "110px";
+        z.style.left = "0px";
       }
       function login() {
         x.style.left = "50px";
-        y.style.left = "450px";
-        z.style.left = "0px";
+        y.style.left = "-450px";
+        z.style.left = "110px";
       }
     </script>
   </body>
