--- a/login2/index.html
+++ b/login2/index.html
@@ -69,12 +69,12 @@
               class="wrap-input100 validate-input"
               data-validate="Username is required"
             >
-              <span class="label-input100">Username</span>
+              <span class="label-input100">Category</span>
               <input
                 class="input100"
                 type="text"
                 name="username"
-                placeholder="Username..."
+                placeholder="category"
                 required
               />
               <span class="focus-input100"></span>
@@ -99,7 +99,7 @@
               class="wrap-input100 validate-input"
               data-validate="Repeat Password is required"
             >
-              <span class="label-input100">Repeat Password</span>
+              <span class="label-input100">Confirm Password</span>
               <input
                 class="input100"
                 type="text"
