--- a/login2/index.html
+++ b/login2/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Login V13</title>
+    <title>Explify-login page</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
     <link
       rel="stylesheet"
       type="text/css"
