--- a/Todist/todolist page/index.html
+++ b/Todist/todolist page/index.html
@@ -17,13 +17,12 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
   </head>
   <body>
-    <h1><span class="title">Todo</span>List</h1>
+    <h1><span class="title">Todo </span>List</h1>
+    <h1>
+      <span class="title2"><a href="../clock/clock.html">CLOCK</a></span>
+    </h1>
     <div class="inputDiv">
-      <input
-        type="text"
-        class="input"
-        placeholder="What Do You Want to Do..."
-      />
+      <input type="text" class="input" placeholder="Add Your Task..." />
       <button class="add"><i class="fas fa-plus"></i></button>
     </div>
     <div class="container"></div>
