--- a/Todist/Tubelight Effect/tubelight.html
+++ b/Todist/Tubelight Effect/tubelight.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style2.css" />
   </head>
   <body>
-    <h2 contenteditable="true">Todolist</h2>
+    <a href="../todolist page/index.html">
+      <div>
+        <h2>Todolist</h2>
+      </div>
+    </a>
   </body>
 </html>
